--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+.card__shadow {
+  box-shadow: 5px 0 60px 0  rgba(35, 24, 55);
+}
